--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -28,6 +28,20 @@
                     "-o",
                     "${fileDirname}/.bin/${fileBasenameNoExtension}"
                 ],
+            },
+            "windows":{
+                "command": "C:\\Program Files\\mingw-w64\\x86_64-8.1.0-posix-seh-rt_v6-rev0\\mingw64\\bin\\g++.exe",
+                "args": [
+                    "-pipe",
+                    "-g",
+                    "-march=native",
+                    "-Wall",
+                    "-Wshadow",
+                    "-Wno-unused-result",
+                    "${file}",
+                    "-o",
+                    "${fileDirname}/.bin/${fileBasenameNoExtension}"
+                ],
             }
         }
     ],
